# aoc_2024

./: Cargo.toml  README.md  shell.nix
aoc_01/src/: main.rs
aoc_02/src/: main.rs
aoc_03/: Cargo.toml
aoc_03/src/: main.rs
aoc_04/: Cargo.toml
aoc_04/proptest-regressions/: main.txt
aoc_04/src/: main.rs
aoc_05/: Cargo.toml
aoc_05/src/: main.rs
aoc_06/: test.txt
aoc_06/src/: main.rs
aoc_07/: Cargo.toml
aoc_07/proptest-regressions/: main.txt
aoc_07/src/: main.rs
aoc_08/: Cargo.toml
aoc_08/proptest-regressions/: main.txt
aoc_08/src/: main.rs
aoc_09/: Cargo.toml  example2.txt
aoc_09/proptest-regressions/: main.txt
aoc_09/src/: main.rs
aoc_10/: Cargo.toml
aoc_10/src/: main.rs
aoc_11/: Cargo.toml
aoc_11/src/: main.rs
aoc_12/: Cargo.toml  test.txt
aoc_12/src/: main.rs
aoc_13/: Cargo.toml  colinear.txt
aoc_13/proptest-regressions/: main.txt
aoc_13/src/: main.rs
grid/: Cargo.toml
grid/proptest-regressions/: lib.txt
grid/src/: lib.rs
