[package]
name = "aoc_04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "1.5.0"
proptest-derive = "0.5.0"

[profile.test]
opt-level = 1

[profile.test.package."*"]
opt-level = 3
